Bug 232052 - Regression: month view does not display events, to-dos and journal entries
Summary: Regression: month view does not display events, to-dos and journal entries
Status: VERIFIED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-25 00:55 UTC by Sabine Faure
Modified: 2010-05-06 01:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-03-25 00:55:02 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch KOrg
- Click on 'Month view' button from the main toolbar
- Create an event by clicking on the New Event button
- The event is not displayed in the month view
- In the resources/folders view uncheck all the calendars and then recheck them all

The event you created is now displayed in the month view.

The same thing happens when trying to create a new to-do or journal entry.

Also if you already have events, to-dos and journal entries created they will not be displayed until you uncheck and then recheck all the calendars.

This is a regression since it did not happen last week.

Trunk, Svn Rev 1106990
Comment 1 Sergio Martins 2010-03-25 01:06:23 UTC
month-view fires a timer while akonadi does his stuff, when the timer triggers, if akonadi is not done yet, month-view won't display a thing.

4.4 has that trigger too, seems some kind of hack/workaround.

We probably can listen to akonadi's model's signals now.
Comment 2 Sabine Faure 2010-04-23 19:09:26 UTC
This happened again today while I was testing other functionalities.

I could not get the month view to display the incidences again until I unchecked and rechecked the kolab calendars.
 
Just unchecking and rechecking the Ical calendars was not enough to get the incidences displayed again.

Trunk, Svn Rev 1117862
Comment 3 Sergio Martins 2010-05-05 22:56:36 UTC
SVN commit 1123339 by smartins:

The session was created but never used.

Can't reproduce the bug anymore.

BUG: 232052



 M  +1 -0      calendarsearch.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1123339
Comment 4 Sabine Faure 2010-05-06 01:18:03 UTC
It is corrected now.

Events, to-dos and journals created from the Month view are correctly displayed whether using an iCal or Kolab calendar.
There is no need to check or uncheck the calendars anymore for them to be displayed.

Trunk, Svn Rev 1123349