The session was created but never used.

Can't reproduce the bug anymore.

BUG: 232052


svn path=/trunk/KDE/kdepim/akonadi/kcal/; revision=1123339